# kira

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: __init__.py  config.py  settings.yaml
frontend/: .gitkeep  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/chat/: layout.tsx  page.tsx
frontend/src/app/conversation/: layout.tsx  page.tsx
frontend/src/app/conversations/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/register/: page.tsx
frontend/src/app/uploads/: page.tsx
frontend/src/components/: ThemeScript.tsx  document-preview-dialog.tsx
frontend/src/components/auth/: AuthModal.tsx  LoginForm.tsx  ProtectedRoute.tsx  RegisterForm.tsx
frontend/src/components/common/: KiraLogo.tsx  ThemeToggle.tsx
frontend/src/components/conversation/: ConversationItem.tsx  ConversationSidebar.tsx  DeleteConfirmDialog.tsx  NewConversationButton.tsx
frontend/src/components/mobile/: MobileNav.tsx
frontend/src/components/ui/: alert.tsx  (+22 more)
frontend/src/i18n/: request.ts  request.tsx
frontend/src/lib/: auth-store.ts  auth-utils.ts  i18n.ts  theme-script.ts
src/: __init__.py  main.py
src/agents/: __init__.py  llm.py  orchestrator.py  prompts.py  rag_agent.py  utils.py
src/agents/routers/: __init__.py  base.py  classifier.py  conversational.py  rag.py  registry.py
src/api/: __init__.py  auth.py  chat.py  documents.py
src/auth/: __init__.py  dependencies.py  security.py
src/constants/: __init__.py
src/database/: __init__.py  models.py  query.py  session.py
src/indexing/: __init__.py  document_store.py  file_store.py  qdrant_store.py
src/ingestion/: __init__.py  bm25_builder.py  chunker.py  cleaner.py  embedding.py  extractor.py  paddleocr_client.py  pipelines.py
src/models/: __init__.py  auth.py  chat.py  documents.py
src/retrieval/: __init__.py  bm25.py  dense.py  hybrid.py
src/tools/: __init__.py  ingestion_tools.py  retrieval_tools.py
tests/: __init__.py  test_api.py
(+27 files in other folders)
