[project]
name = "kira-simple"
version = "1.0.0"
description = "K.I.R.A Simplified - Single FastAPI Service with Hybrid Retrieval"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "pyyaml>=6.0.0",
    "email-validator>=2.1.0",
    "httpx>=0.26.0",
    "qdrant-client>=1.7.0",
    "minio>=7.2.0",
    "anthropic>=0.40.0",
    "openai>=1.12.0",
    "google-genai>=1.0.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "python-pptx>=0.6.0",
    "numpy>=1.26.0,<2.0",
    "tiktoken>=0.6.0",
    "rank-bm25>=0.2.2",
    "jieba>=0.42.1",
    "jinja2>=3.1.0",
    "langchain-core>=0.3",
    "websockets>=12.0",
    "python-magic>=0.4.27",
    "sentence-transformers>=2.2.2",
    "torch",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "loguru>=0.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
include = ["config*", "src*"]

# Disable package mode for application development
[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
